--- a/package.json
+++ b/package.json
@@ -14,5 +14,13 @@
     "es6-symbol": "^3.1.3",
     "lodash": "^4.17.20",
     "mocha": "^8.3.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.16",
+    "@babel/preset-env": "^7.12.16",
+    "@babel/register": "^7.12.13",
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
