--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.7.2",
     "chai": "^4.3.0",
     "chai-spies": "^1.0.0",
     "es6-symbol": "^3.1.3",
