--- a/package.json
+++ b/package.json
@@ -3,16 +3,29 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "author": "",
+  "license": "ISC",
   "scripts": {
     "test": "npx mocha tests/**/*.test.js --reporter spec --colors"
   },
-  "author": "",
-  "license": "ISC",
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": ["lint-staged", "npm run test"]
+    }
+  },
   "dependencies": {
     "bluebird": "^3.7.2",
     "chai": "^4.3.0",
     "chai-spies": "^1.0.0",
     "es6-symbol": "^3.1.3",
+    "husky": "^5.0.9",
+    "lint-staged": "^10.5.4",
     "lodash": "^4.17.20",
     "mocha": "^8.3.0"
   },
