--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
+    "lint": "npx eslint ./ --fix",
     "test": "npx mocha tests/**/*.test.js --reporter spec --colors"
   },
   "lint-staged": {
@@ -24,8 +25,6 @@
     "chai": "^4.3.0",
     "chai-spies": "^1.0.0",
     "es6-symbol": "^3.1.3",
-    "husky": "^5.0.9",
-    "lint-staged": "^10.5.4",
     "lodash": "^4.17.20",
     "mocha": "^8.3.0"
   },
@@ -35,6 +34,8 @@
     "@babel/register": "^7.12.13",
     "eslint": "^7.20.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1"
+    "eslint-plugin-import": "^2.22.1",
+    "husky": "^5.0.9",
+    "lint-staged": "^10.5.4"
   }
 }
