--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": ["lint-staged", "npm run test"]
+      "pre-commit": "lint-staged"
     }
   },
   "dependencies": {
