add git repo to package

--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "lib/index.js",
   "author": "Christian Micle",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/CodeMedic42/constructure.git"
+  },
   "scripts": {
     "lint": "npx eslint ./ --fix",
     "test": "npx mocha tests/**/*.test.js --reporter spec --colors",
