--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/CodeMedic42/constructure.git"
   },
   "scripts": {
-    "lint": "npx eslint ./src ./tests --fix",
+    "lint": "npx eslint ./src ./tests ./examples --fix",
     "test": "npx mocha tests/**/*.test.js --reporter spec --colors",
     "verify": "npm run lint && npm test",
     "build": "./node_modules/.bin/babel ./src --out-dir lib",
@@ -41,14 +41,17 @@
   "devDependencies": {
     "@babel/cli": "^7.13.0",
     "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.13.8",
     "@babel/preset-env": "^7.12.16",
+    "@babel/preset-react": "^7.12.13",
     "@babel/register": "^7.12.13",
     "chai": "^4.3.0",
     "chai-as-promised": "^7.1.1",
     "chai-spies": "^1.0.0",
     "eslint": "^7.20.0",
-    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "husky": "^5.0.9",
     "lint-staged": "^10.5.4",
