--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   "dependencies": {
     "bluebird": "^3.7.2",
     "es6-symbol": "^3.1.3",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.0",
